# EUREKA-Educational-Universal-Reasoning-Enhanced-Knowledge-Architecture

./: .env.example  .env.template  .gitignore  .gitleaks.toml  .sops.yaml  AI-TUTOR-IMPLEMENTATION-SUMMARY.md  API_CONNECTION_FIX_SUMMARY.md  CORRECTED_IMPLEMENTATION_STATUS.md  DEPLOYMENT_GUIDE.md  FE-Electrical-Computer-Course.jsx  FINAL_COMPLETION_STATUS.md  FINAL_INTEGRATION_SUMMARY.md  FINAL_STATUS_REPORT.md  FOLDER_ANALYSIS_INDEX.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_COMPLETE.md  INTEGRATION_PROGRESS_STATUS.md  INTEGRATION_VERIFICATION_WITH_LINKS.md  LOCALHOST_LINKS.md  MASTER_INTEGRATION_PLAN.md  MISSING_INTEGRATIONS_REPORT.md  Makefile  NEXT_STEPS.md  PHASE2_FINAL_STATUS.md  PHASE2_INTEGRATION_CURRENT_STATUS.md  PHASE2_INTEGRATION_STATUS.md  PHASE2_QUICKSTART.md  PHASE_2_INTEGRATION_COMPLETE.md  PHASE_3_COMPLETION_STATUS.md  PLATFORM_COMPLETION_STATUS.md  PORT_FIXES_COMPLETE.md  PRODUCTION_SETUP_GUIDE.md  QUICK_REFERENCE.md  README.md  SERVICES_RUNNING_STATUS.md  SERVICE_COMPLETION_PLAN.md  SERVICE_COMPLETION_SUMMARY.md  START_TEST_PREP.sh  TEST_PREP_COMPLETE_FIX_SUMMARY.md  (+4 more)
axiom/apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
axiom/apps/api/alembic/: env.py
axiom/apps/api/app/: __init__.py  main.py  seed.py  seed_foundations.py
axiom/apps/api/tests/: conftest.py  test_accommodations.py  test_adaptive_completeness.py  test_ai_copilot.py  test_analytics.py  test_analytics_completeness.py  test_assessment_window.py  test_async_grading.py  test_auth.py  test_bkt.py  (+44 more)
(+1890 files in other folders)
